# twitter-clone-1

./: README.md
backend/: .env  Cargo.toml  build.sh  sqlx-data.json
backend/migrations/: 20220923035700_create_users.up.sql
backend/src/: main.rs  modules.rs
backend/src/application/: auth_command.rs  auth_service.rs  mod.rs  user_query.rs
backend/src/application/lib/: jwt.rs  mod.rs  password.rs  password_hashing.rs
backend/src/domain/: lib.rs  mod.rs  user.rs
backend/src/infrastructure/: config.rs  mod.rs  user_query_impl.rs  user_repository_impl.rs
backend/src/infrastructure/model/: mod.rs  user_row.rs
backend/src/presentation/: index.rs  mod.rs  user.rs
backend/src/presentation/lib/: error.rs  jwt.rs  jwt_extractor.rs  mod.rs
backend/src/presentation/users/: mod.rs  registrations.rs  sessions.rs
frontend/: .firebaserc  .gitignore  package.json  vite.config.ts
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.tsx  env.d.ts
frontend/src/components/Form/: FieldWrapper.tsx  InputField.tsx
frontend/src/components/Heading/: index.tsx
frontend/src/components/Link/: index.tsx
frontend/src/features/auth/: index.ts
frontend/src/features/auth/api/: index.ts
frontend/src/features/auth/components/: Layout.tsx
frontend/src/features/auth/hooks/: use-sign-in.ts  use-sign-up.ts
frontend/src/hooks/: useMe.ts
frontend/src/lib/: axios.ts
frontend/src/providers/: app.tsx  auth.tsx
frontend/src/routes/: index.tsx  protected.tsx  public.tsx
frontend/src/types/: index.ts
frontend/src/utils/: storage.ts
(+7 files in other folders)
