[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1"
# actix-cors = "0.6"
# anyhow = "1.0"
# argon2 = "0.4"
# async-trait = "0.1"
# chrono = { version = "0.4", features = ["serde"] }
# config = "0.13"
# derive-new = "0.5"
# dotenv = "0.15"
# env_logger = "0.9"
# jsonwebtoken = "8.1"
# lazy_static = "1.4"
# regex = "1.6"
# rand_core = { version = "0.6", features = ["std"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# sqlx = { version = "0.6", features = [
#   "runtime-actix-native-tls",
#   "postgres",
#   "offline",
#   "chrono",
# ] }
# ulid = { version = "1.0", features = ["serde"] }
# validator = { version = "0.16", features = ["derive"] }
